--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "joi": "^14.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
     "nodemon": "^2.0.12"
   }
